--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Ivan Postarnak">
   <meta name="description" content="Web page to fill the database up">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="./src/main.css">
+  <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="stylesheet" href="./src/index.css">
   <title>Know It All</title>
 </head>
 <body>
