feat: add intro slide + background gradient for it

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <link rel="stylesheet" href="./src/index.css">
   <title>Know It All</title>
 </head>
-<body>
-  
+<body class="body-of-the-page">
+  <section class="container">
+    <div class="slide slide--slide-intro"></div>
+  </section>
   <script type="text/javascript" src="./scripts/main.js"></script>
 </body>
 </html>
