feat: add 'bubble' block and make @mixin refactor

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body class="body-of-the-page">
   <section class="container">
-    <div class="slide slide--slide-intro"></div>
+    <div class="slide slide--slide-intro">
+      <div class="bubble bubble--big-size js-bubble"></div>
+    </div>
   </section>
   <script type="text/javascript" src="./scripts/main.js"></script>
 </body>
