feat: add form-holder on the intro-slide

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 <body class="body-of-the-page">
   <section class="container">
     <div class="slide slide--slide-intro">
-      <div class="bubble bubble--big-size js-bubble"></div>
+      <div class="slide__inner slide__inner--slide-intro">
+        <div class="slide__form-holder slide__form-holder--slide-intro">
+          <form action="#" class="add-card-form">
+            
+          </form>
+        </div>
+      </div>
     </div>
   </section>
   <script type="text/javascript" src="./scripts/main.js"></script>
