--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Ivan Postarnak">
   <meta name="description" content="Web page to fill the database up">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?
+              family=Share+Tech+Mono&
+              family=Ubuntu+Mono:wght@400;700&display=swap">
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
   <link rel="stylesheet" href="./src/index.css">
   <title>Know It All</title>
