--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <meta name="description" content="Web page to fill the database up">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?
-              family=Share+Tech+Mono&
-              family=Ubuntu+Mono:wght@400;700&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
   <link rel="stylesheet" href="./src/index.css">
   <title>Know It All</title>
