--- a/index.html
+++ b/index.html
@@ -55,6 +55,5 @@
       </div>
     </div>
   </section>
-  <script type="text/javascript" src="./scripts/main.js"></script>
-</body>
+  <script type="module" src="./scripts/main.js"></script>
 </html>
