--- a/index.html
+++ b/index.html
@@ -36,11 +36,23 @@
                     name="main-category"
                     id=""
                     tabindex="3">
+                    <option class="add-card-form__select-item"
+                          value=""
+                          selected
+                          disabled>
+                          main category
+                    </option>
             </select>
             <select class="add-card-form__select-field add-card-form__select-field--additional-categories"
                     name="additional-categories"
                     id=""
                     tabindex="4">
+                    <option class="add-card-form__select-item"
+                            value=""
+                            selected
+                            disabled>
+                            additional categories
+                    </option>
             </select>
             <button class="add-card-form__submit-button"
                     type="submit">
