feat: add 3 testing categories for main select

--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
                           disabled>
                           main category
                     </option>
+                    <option class="add-card-form__select-item"
+                            value="html">
+                            HTML
+                    </option>
+                    <option class="add-card-form__select-item"
+                            value="css">
+                            CSS
+                    </option>
+                    <option class="add-card-form__select-item"
+                            value="javascript">
+                            JavaScript
+                    </option>
             </select>
             <select class="add-card-form__select-field add-card-form__select-field--additional-categories"
                     name="additional-categories"
