feat: add dynamic filling of select sections (temp version)

--- a/index.html
+++ b/index.html
@@ -32,40 +32,8 @@
                     type="text"
                     placeholder="answer"
                     tabindex="2"></textarea>
-            <select class="add-card-form__select-field add-card-form__select-field--main-catefory"
-                    name="main-category"
-                    id=""
-                    tabindex="3">
-                    <option class="add-card-form__select-item"
-                          value=""
-                          selected
-                          disabled>
-                          main category
-                    </option>
-                    <option class="add-card-form__select-item"
-                            value="html">
-                            HTML
-                    </option>
-                    <option class="add-card-form__select-item"
-                            value="css">
-                            CSS
-                    </option>
-                    <option class="add-card-form__select-item"
-                            value="javascript">
-                            JavaScript
-                    </option>
-            </select>
-            <select class="add-card-form__select-field add-card-form__select-field--additional-categories"
-                    name="additional-categories"
-                    id=""
-                    tabindex="4">
-                    <option class="add-card-form__select-item"
-                            value=""
-                            selected
-                            disabled>
-                            additional categories
-                    </option>
-            </select>
+            <div class="add-card-form__select-holder"></div>
+            <div class="add-card-form__select-holder"></div>
             <button class="add-card-form__submit-button"
                     type="submit">
                     save card
