fix: fix separate appearance of select holder and select element itself

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     type="text"
                     placeholder="answer"
                     tabindex="2"></textarea>
-            <div class="add-card-form__select-holder"></div>
-            <div class="add-card-form__select-holder"></div>
+            <div class="js-select-holder"></div>
+            <div class="js-select-holder"></div>
             <button class="add-card-form__submit-button"
                     type="submit">
                     save card
