fix: fix disconnection between 'add-card-form' and dynamic selects'

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <div class="slide__inner slide__inner--slide-intro">
         <div class="slide__form-holder slide__form-holder--slide-intro">
           <form class="add-card-form js-cardForm"
-                name="addNewCardForm">
+                name="addNewCardForm"
+                id="addNewCard">
             <input class="add-card-form__input-question"
                     name="question"
                     type="text"
@@ -32,8 +33,8 @@
                     type="text"
                     placeholder="answer"
                     tabindex="2"></textarea>
-            <div class="js-select-holder"></div>
-            <div class="js-select-holder"></div>
+            <div class="add-card-form__select-holder js-select-holder"></div>
+            <div class="add-card-form__select-holder js-select-holder"></div>
             <button class="add-card-form__submit-button"
                     type="submit">
                     save card
