feat: add 'oneFieldPreloader' for the select elements of the form

--- a/index.html
+++ b/index.html
@@ -33,8 +33,24 @@
                     type="text"
                     placeholder="answer"
                     tabindex="2"></textarea>
-            <div class="add-card-form__select-holder js-select-holder"></div>
-            <div class="add-card-form__select-holder js-select-holder"></div>
+            <div class="add-card-form__select-holder js-select-holder">
+              <div id="" class="one-field-preloader js-one-field-preloader">
+                <div class="loadingio-spinner-pulse-ckjnjglaokr">
+                  <div class="ldio-l70we991ur">
+                    <div></div><div></div><div></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="add-card-form__select-holder js-select-holder">
+              <div id="" class="one-field-preloader js-one-field-preloader">
+                <div class="loadingio-spinner-pulse-ckjnjglaokr">
+                  <div class="ldio-l70we991ur">
+                    <div></div><div></div><div></div>
+                  </div>
+                </div>
+              </div>
+            </div>
             <button class="add-card-form__submit-button"
                     type="submit">
                     save card
