fix: make fields of form required

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
                     name="question"
                     type="text"
                     placeholder="question"
-                    tabindex="1">
+                    tabindex="1"
+                    required>
             <textarea class="add-card-form__textarea-answer"
                     name="answer"
                     type="text"
                     placeholder="answer"
-                    tabindex="2"></textarea>
+                    tabindex="2"
+                    required></textarea>
             <div class="add-card-form__select-holder js-select-holder">
               <div id="" class="one-field-preloader js-one-field-preloader">
                 <div class="loadingio-spinner-pulse-ckjnjglaokr">
