feat: add 'know it all' title on the intro-slide

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <section class="container">
     <div class="slide slide--slide-intro">
       <div class="slide__inner slide__inner--slide-intro">
+        <h1 class="slide__title slide__title--slide-intro">Know it all</h1>
         <div class="slide__form-holder slide__form-holder--slide-intro">
           <form class="add-card-form js-cardForm"
                 name="addNewCardForm"
