feat: add second slide for the made cards

--- a/index.html
+++ b/index.html
@@ -63,5 +63,13 @@
       </div>
     </div>
   </section>
+
+  <section class="container container--slide-cards">
+    <div class="slide slide--slide-cards">
+      <div class="slide__inner slide__inner--slide-cards">
+        
+      </div>
+    </div>
+  </section>
   <script type="module" src="./scripts/main.js"></script>
 </html>
