feat: add 'single-card-holder' and 'single-card-preloader' elements

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </div>
             </div>
             <div class="add-card-form__select-holder js-select-holder">
-              <div id="" class="one-field-preloader js-one-field-preloader">
+              <div class="one-field-preloader js-one-field-preloader">
                 <div class="loadingio-spinner-pulse-ckjnjglaokr">
                   <div class="ldio-l70we991ur">
                     <div></div><div></div><div></div>
@@ -67,7 +67,33 @@
   <section class="container container--slide-cards">
     <div class="slide slide--slide-cards">
       <div class="slide__inner slide__inner--slide-cards">
-        
+        <div class="slide__single-card-holder js-single-card-holder">
+          <div class="single-card-preloader js-single-card-preloader">
+            <div class="loadingio-spinner-dual-ball-bp6pqhi51sp">
+              <div class="ldio-1akyqjrxu0e">
+                <div></div><div></div><div></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="slide__single-card-holder js-single-card-holder">
+          <div class="single-card-preloader js-single-card-preloader">
+            <div class="loadingio-spinner-dual-ball-bp6pqhi51sp">
+              <div class="ldio-1akyqjrxu0e">
+                <div></div><div></div><div></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="slide__single-card-holder js-single-card-holder">
+          <div class="single-card-preloader js-single-card-preloader">
+            <div class="loadingio-spinner-dual-ball-bp6pqhi51sp">
+              <div class="ldio-1akyqjrxu0e">
+                <div></div><div></div><div></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
