feat: add 'single-card' block and change preloader for it

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- CopyRights -->
-<!-- Owner: https://github.com/IvanPostarnak https://vk.com/ivanpostarnak -->
+<!-- @author: https://github.com/IvanPostarnak https://vk.com/ivanpostarnak -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -56,7 +56,7 @@
             </div>
             <button class="add-card-form__submit-button"
                     type="submit">
-                    save card
+                    Save card
             </button>
           </form>
         </div>
@@ -64,13 +64,34 @@
     </div>
   </section>
 
-  <section class="container container--slide-cards">
+  <main class="container container--slide-cards">
     <div class="slide slide--slide-cards">
       <div class="slide__inner slide__inner--slide-cards">
         <div class="slide__single-card-holder js-single-card-holder">
+          <article class="single-card">
+            <div class="single-card__content">
+              <div class="single-card__header-line">
+                <p class="single-card__question">Question</p>
+              </div>
+              <p class="single-card__answer">Question</p>
+            </div>
+            <div class="single-card__info">
+              <div class="single-card__categories">
+                <div class="single-card__main-category">HTML</div>
+                <div class="single-card__additional-categories">CSS</div>
+              </div>
+              <div class="single-card__metadata">
+                <p class="single-card__time">12 мая</p>
+                <p class="single-card__type">USER</p>
+                <p class="single-card__lang">RU</p>
+              </div>
+            </div>
+          </article>
+        </div>
+        <div class="slide__single-card-holder js-single-card-holder">
           <div class="single-card-preloader js-single-card-preloader">
-            <div class="loadingio-spinner-dual-ball-bp6pqhi51sp">
-              <div class="ldio-1akyqjrxu0e">
+            <div class="loadingio-spinner-pulse-if2u0pyqwxs">
+              <div class="ldio-nxtxow40e7">
                 <div></div><div></div><div></div>
               </div>
             </div>
@@ -78,17 +99,8 @@
         </div>
         <div class="slide__single-card-holder js-single-card-holder">
           <div class="single-card-preloader js-single-card-preloader">
-            <div class="loadingio-spinner-dual-ball-bp6pqhi51sp">
-              <div class="ldio-1akyqjrxu0e">
-                <div></div><div></div><div></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="slide__single-card-holder js-single-card-holder">
-          <div class="single-card-preloader js-single-card-preloader">
-            <div class="loadingio-spinner-dual-ball-bp6pqhi51sp">
-              <div class="ldio-1akyqjrxu0e">
+            <div class="loadingio-spinner-pulse-if2u0pyqwxs">
+              <div class="ldio-nxtxow40e7">
                 <div></div><div></div><div></div>
               </div>
             </div>
@@ -96,6 +108,6 @@
         </div>
       </div>
     </div>
-  </section>
+  </main>
   <script type="module" src="./scripts/main.js"></script>
 </html>
