refactor: extract holders of blocks into their origin .scss files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="slide slide--slide-intro">
       <div class="slide__inner slide__inner--slide-intro">
         <h1 class="slide__title slide__title--slide-intro">Know it all</h1>
-        <div class="slide__form-holder slide__form-holder--slide-intro">
+        <div class="form-holder">
           <form class="add-card-form js-cardForm"
                 name="addNewCardForm"
                 id="addNewCard">
@@ -67,7 +67,7 @@
   <main class="container container--slide-cards">
     <div class="slide slide--slide-cards">
       <div class="slide__inner slide__inner--slide-cards">
-        <div class="slide__single-card-holder js-single-card-holder">
+        <div class="single-card-holder js-single-card-holder">
           <article class="single-card">
             <div class="single-card__content">
               <div class="single-card__header-line">
@@ -88,7 +88,7 @@
             </div>
           </article>
         </div>
-        <div class="slide__single-card-holder js-single-card-holder">
+        <div class="single-card-holder js-single-card-holder">
           <div class="single-card-preloader js-single-card-preloader">
             <div class="loadingio-spinner-pulse-if2u0pyqwxs">
               <div class="ldio-nxtxow40e7">
@@ -97,7 +97,7 @@
             </div>
           </div>
         </div>
-        <div class="slide__single-card-holder js-single-card-holder">
+        <div class="single-card-holder js-single-card-holder">
           <div class="single-card-preloader js-single-card-preloader">
             <div class="loadingio-spinner-pulse-if2u0pyqwxs">
               <div class="ldio-nxtxow40e7">
