fix: set correct render of card's info (also replace <p> with <a> in meta)

--- a/index.html
+++ b/index.html
@@ -77,13 +77,17 @@
             </div>
             <div class="single-card__info">
               <div class="single-card__metadata">
-                <p class="single-card__time">12 мая</p>
-                <p class="single-card__type">USER</p>
-                <p class="single-card__lang">RU</p>
+                <a class="single-card__time">12 мая</a>
+                <a class="single-card__type">USER</a>
+                <a class="single-card__lang">RU</a>
               </div>
               <div class="single-card__categories">
-                <div class="single-card__main-category">HTML</div>
-                <div class="single-card__additional-categories">CSS</div>
+                <div class="single-card__main-category-wrapper">
+                  <a class="single-card__main-category">HTML</a>
+                </div>
+                <div class="single-card__additional-categories-wrapper">
+                  <a class="single-card__additional-categories">CSS</a>
+                </div>
               </div>
             </div>
           </article>
