fix: fix render of card's text across the whole body

--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
           <article class="single-card">
             <div class="single-card__content">
               <div class="single-card__header-line">
-                <p class="single-card__question">Question</p>
+                <p class="single-card__question">Question Question</p>
               </div>
-              <p class="single-card__answer">Question</p>
+              <p class="single-card__answer">My answer is try to write some knowledge you would like to save, so there you go</p>
             </div>
             <div class="single-card__info">
               <div class="single-card__metadata">
-                <a class="single-card__time">12 мая</a>
                 <a class="single-card__type">USER</a>
                 <a class="single-card__lang">RU</a>
+                <a class="single-card__time"><time>12 мая</time></a>
               </div>
               <div class="single-card__categories">
                 <div class="single-card__main-category-wrapper">
