feat: add 'description' attribute to every default category

--- a/index.html
+++ b/index.html
@@ -68,29 +68,13 @@
     <div class="slide slide--slide-cards">
       <div class="slide__inner slide__inner--slide-cards">
         <div class="single-card-holder js-single-card-holder">
-          <article class="single-card">
-            <div class="single-card__content">
-              <div class="single-card__header-line">
-                <p class="single-card__question">Question Question</p>
-              </div>
-              <p class="single-card__answer">My answer is try to write some knowledge you would like to save, so there you go</p>
-            </div>
-            <div class="single-card__info">
-              <div class="single-card__metadata">
-                <a class="single-card__type">USER</a>
-                <a class="single-card__lang">RU</a>
-                <a class="single-card__time"><time>12 мая</time></a>
-              </div>
-              <div class="single-card__categories">
-                <div class="single-card__main-category-wrapper">
-                  <a class="single-card__main-category">HTML</a>
-                </div>
-                <div class="single-card__additional-categories-wrapper">
-                  <a class="single-card__additional-categories">CSS</a>
-                </div>
+          <div class="single-card-preloader js-single-card-preloader">
+            <div class="loadingio-spinner-pulse-if2u0pyqwxs">
+              <div class="ldio-nxtxow40e7">
+                <div></div><div></div><div></div>
               </div>
             </div>
-          </article>
+          </div>
         </div>
         <div class="single-card-holder js-single-card-holder">
           <div class="single-card-preloader js-single-card-preloader">
@@ -113,5 +97,29 @@
       </div>
     </div>
   </main>
+  
+  <article class="single-card">
+    <div class="single-card__content">
+      <div class="single-card__header-line">
+        <p class="single-card__question">Question Question</p>
+      </div>
+      <p class="single-card__answer">My answer is try to write some knowledge you would like to save, so there you go</p>
+    </div>
+    <div class="single-card__info">
+      <div class="single-card__metadata">
+        <a class="single-card__type">USER</a>
+        <a class="single-card__lang">RU</a>
+        <a class="single-card__time"><time>12 мая</time></a>
+      </div>
+      <div class="single-card__categories">
+        <div class="single-card__main-category-wrapper">
+          <a class="single-card__main-category">HTML</a>
+        </div>
+        <div class="single-card__additional-categories-wrapper">
+          <a class="single-card__additional-categories">CSS</a>
+        </div>
+      </div>
+    </div>
+  </article>
   <script type="module" src="./scripts/main.js"></script>
 </html>
