feat: create starter pack of 'default cards.json'

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     tabindex="2"
                     required></textarea>
             <div class="add-card-form__select-holder js-select-holder">
-              <div id="" class="one-field-preloader js-one-field-preloader">
+              <div id="" class="one-field-preloader">
                 <div class="loadingio-spinner-pulse-ckjnjglaokr">
                   <div class="ldio-l70we991ur">
                     <div></div><div></div><div></div>
@@ -46,7 +46,7 @@
               </div>
             </div>
             <div class="add-card-form__select-holder js-select-holder">
-              <div class="one-field-preloader js-one-field-preloader">
+              <div class="one-field-preloader">
                 <div class="loadingio-spinner-pulse-ckjnjglaokr">
                   <div class="ldio-l70we991ur">
                     <div></div><div></div><div></div>
@@ -66,27 +66,9 @@
 
   <main class="container container--slide-cards">
     <div class="slide slide--slide-cards">
-      <div class="slide__inner slide__inner--slide-cards">
+      <div class="slide__inner slide__inner--slide-cards js-cards-holder">
         <div class="single-card-holder js-single-card-holder">
-          <div class="single-card-preloader js-single-card-preloader">
-            <div class="loadingio-spinner-pulse-if2u0pyqwxs">
-              <div class="ldio-nxtxow40e7">
-                <div></div><div></div><div></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="single-card-holder js-single-card-holder">
-          <div class="single-card-preloader js-single-card-preloader">
-            <div class="loadingio-spinner-pulse-if2u0pyqwxs">
-              <div class="ldio-nxtxow40e7">
-                <div></div><div></div><div></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="single-card-holder js-single-card-holder">
-          <div class="single-card-preloader js-single-card-preloader">
+          <div class="single-card-preloader">
             <div class="loadingio-spinner-pulse-if2u0pyqwxs">
               <div class="ldio-nxtxow40e7">
                 <div></div><div></div><div></div>
@@ -97,7 +79,7 @@
       </div>
     </div>
   </main>
-  
+
   <article class="single-card">
     <div class="single-card__content">
       <div class="single-card__header-line">
