fix: add arrows to top and buttom in 'go-to-button'

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
     </main>
 
-    <button class="go-to-top-and-bottom-button js-go-top-and-bottom-button"></button>
+    <button class="go-to-top-and-bottom-button go-to-top-and-bottom-button--bot js-go-top-and-bottom-button"></button>
     <script type="module" src="./scripts/main.js"></script>
   </body>
 </html>
