fix: make 'go-to-button' rotate instead of changing arrow

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
       </div>
     </main>
 
-    <button class="go-to-top-and-bottom-button go-to-top-and-bottom-button--bot js-go-top-and-bottom-button"></button>
+    <aside class="go-to-top-and-bottom-button js-go-top-and-bottom-button">
+      <div class="go-to-top-and-bottom-button__arrow"></div>
+    </aside>
     <script type="module" src="./scripts/main.js"></script>
   </body>
 </html>
