--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <aside class="go-to-top-and-bottom-button js-go-top-and-bottom-button">
       <div class="go-to-top-and-bottom-button__arrow"></div>
     </aside>
+    <aside class="bubble bubble--big-size js-bubble"></aside>
     <script type="module" src="./scripts/main.js"></script>
   </body>
 </html>
