feat: add GET request for meta of database

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
       </div>
     </section>
 
+    <section class="filter js-filter">
+      
+    </section>
+
     <main class="container container--slide-cards">
       <div class="slide slide--slide-cards">
         <div class="slide__inner slide__inner--slide-cards js-cards-holder">
