feat: add removing default cards if checkbox is unchecked

--- a/index.html
+++ b/index.html
@@ -64,8 +64,21 @@
       </div>
     </section>
 
-    <section class="filter js-filter">
-      
+    <section class="container container--slide-filter">
+      <div class="slide slide--slide-filter js-filter">
+        <input class="slide__type-of-cards--default js-default-type"
+               type="checkbox"
+               name="type-of-cards"
+               id="default-cards"
+               checked>
+        <label for="default-cards">default</label>
+        <input class="slide__type-of-cards--users js-users-type"
+               type="checkbox"
+               name="type-of-cards"
+               id="users-cards"
+               checked>
+        <label for="users-cards">user's</label>
+      </div>
     </section>
 
     <main class="container container--slide-cards">
