feat: add dynamic fill of 'select category' filter

--- a/index.html
+++ b/index.html
@@ -66,18 +66,29 @@
 
     <section class="container container--slide-filter">
       <div class="slide slide--slide-filter js-filter">
-        <input class="slide__type-of-cards--default js-default-type"
-               type="checkbox"
-               name="type-of-cards"
-               id="default-cards"
-               checked>
-        <label for="default-cards">default</label>
-        <input class="slide__type-of-cards--users js-users-type"
-               type="checkbox"
-               name="type-of-cards"
-               id="users-cards"
-               checked>
-        <label for="users-cards">user's</label>
+        <div class="slide__inner slide__inner--slide-filter">
+          <input class="slide__type-of-cards--default js-default-type"
+                type="checkbox"
+                name="type-of-cards"
+                id="default-cards"
+                checked>
+          <label for="default-cards">default</label>
+          <input class="slide__type-of-cards--users js-users-type"
+                type="checkbox"
+                name="type-of-cards"
+                id="users-cards"
+                checked>
+          <label for="users-cards">user's</label>
+          <div class="add-card-form__select-holder js-select-filter-holder">
+            <div class="one-field-preloader">
+              <div class="loadingio-spinner-pulse-ckjnjglaokr">
+                <div class="ldio-l70we991ur">
+                  <div></div><div></div><div></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
