--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <aside class="go-to-top-and-bottom-button js-go-top-and-bottom-button">
       <div class="go-to-top-and-bottom-button__arrow"></div>
     </aside>
-    <aside class="bubble bubble--big-size js-bubble"></aside>
+    <aside class="trash-box js-trash-box"></aside>
     <script type="module" src="./scripts/main.js"></script>
   </body>
 </html>
