feat: add 'reset fiter' button on filter

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
               </div>
             </div>
           </div>
+          <button class="add-card-form__submit-button js-reset-filter-button">Reset filter</button>
         </div>
       </div>
     </section>
