feat: add 'search filter' module

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
     <section class="container container--slide-filter">
       <div class="slide slide--slide-filter js-filter">
         <div class="slide__inner slide__inner--slide-filter">
+          <input class="add-card-form__input-question js-filter-search"
+                      name="filtered-text"
+                      type="text"
+                      placeholder="Search through cards..."
+                      tabindex="3"
+                      required>
           <input class="slide__type-of-cards--default js-default-type"
                 type="checkbox"
                 name="type-of-cards"
