feat: add 'card counter' in filter

--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
             <button class="filter__reset-date-button js-reset-date-button">X</button>
           </div>
           <button class="filter__reset-filter-button js-reset-filter-button">Reset filter</button>
+          <div class="filter__cards-counter js-filter-cards-counter">
+            <div class="filter__cards-counter-preloader">
+              <div class="loadingio-spinner-pulse-ckjnjglaokr">
+                <div class="ldio-l70we991ur">
+                  <div></div><div></div><div></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
